--- a/styles.css
+++ b/styles.css
@@ -114,17 +114,17 @@ body {
 }
 
 .sparkle-top {
-  top: -25px;
-  right: -20px;
-  width: 65px;
+  top: -30px;
+  left: -25px;
+  width: 80px;
   height: auto;
 }
 
 .cloud {
   position: absolute;
-  bottom: -30px;
-  right: -15px;
-  width: 110px;
+  bottom: -35px;
+  right: -20px;
+  width: 130px;
   height: auto;
   z-index: 10;
 }
