--- a/styles.css
+++ b/styles.css
@@ -114,17 +114,17 @@ body {
 }
 
 .sparkle-top {
-  top: -30px;
-  left: -25px;
-  width: 80px;
+  top: -20px;
+  left: -15px;
+  width: 60px;
   height: auto;
 }
 
 .cloud {
   position: absolute;
-  bottom: -35px;
-  right: -20px;
-  width: 130px;
+  bottom: -25px;
+  right: -15px;
+  width: 100px;
   height: auto;
   z-index: 10;
 }
@@ -166,7 +166,14 @@ body {
   }
 
   .sparkle-top {
-    left: 50%;
-    transform: translateX(-50%);
+    top: -20px;
+    left: -10px;
+    width: 50px;
+  }
+
+  .cloud {
+    bottom: -20px;
+    right: -10px;
+    width: 85px;
   }
 }
